# game_shelf

./: .gitignore  LICENSE  README.md  main.py  project_plan.md  pyproject.toml
game_shelf/: __init__.py  __main__.py  cli.py  models.py  storage.py
game_shelf/datasource/: __init__.py  base.py  local_seed.py
game_shelf/resources/: __init__.py  games_seed.json
