[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "game-shelf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.1.9",
    "pydantic>=2.13.3",
    "click>=8.1.0",
    "requests>=2.33.1",
    "ruff>=0.15.11",
    "tqdm>=4.67.3",
]

[project.scripts]
game-shelf = "game_shelf.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["game_shelf"]

[tool.hatch.build]
include = ["game_shelf/resources/games_seed.json"]
